--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=GreenPointBackend
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/auth/realms/greenpoint
-#spring.datasource.url=jdbc:mysql://localhost:3306/NAVN_PÅ_DIN_DATABASE
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/greenpoint
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
